tests/ui/type-alias-impl-trait/declared_but_not_defined_in_scope.stderr
error[E0308]: mismatched types
  --> $DIR/declared_but_not_defined_in_scope.rs:11:5
   |
LL |     pub type Boo = impl ::std::fmt::Debug;
   |                    ---------------------- the expected opaque type
...
LL | fn bomp() -> boo::Boo {
   |              -------- expected `Boo` because of return type
LL |     ""
   |     ^^ expected opaque type, found `&str`
   |
   = note: expected opaque type `Boo`
                found reference `&'static str`
note: this item must have the opaque type in its signature in order to be able to register hidden types
  --> $DIR/declared_but_not_defined_in_scope.rs:10:4
   |
LL | fn bomp() -> boo::Boo {
   |    ^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
